# Weather-Data-Pipeline

./: README.md  docker-compose.yaml  pyproject.toml  requirements.txt
database/init/: initialize_db.sql
database/sample_csv_data/: city.csv  current_weather.csv  daily_weather_analyses.csv
src/pipeline/: extract_weather_data.py  extract_weather_historical_data.py  load_weather_data.py  load_weather_historical_data.py  main.py  transform_weather_data.py  transform_weather_historical_data.py  weather_analysis_pipeline.py
src/pipeline/current_weather_data/: current_weather_pipeline.py  extract_weather_data.py  load_weather_data.py  transform_weather_data.py
src/pipeline/daily_weather_analysis/: extract_weather_historical_data.py  load_weather_historical_data.py  transform_weather_historical_data.py  weather_analysis_pipeline.py
