[project]
name = "current-weather-data-pipeline"
description = "Coursework for Big Data Management and Processing course"
authors = [
    { name = "Stefan Velev", email = "stefanvelev349@gmail.com" }
]
dependencies = [
    "prefect ~= 3.1.10",
    "httpx ~= 1.0.0b0",
    "psycopg2 ~= 2.9.10"
]

[project.scripts]
pipeline = "src.pipeline.main:main"