[project]
name = "weather-data-pipeline"
description = "Coursework for Big Data Management and Processing Course"
authors = [
    { name = "Stefan Velev", email = "stefanvelev349@gmail.com" }
]
dependencies = [
    "prefect ~= 3.1.10",
    "httpx ~= 1.0.0b0",
    "psycopg2 ~= 2.9.10",
    "psycopg2-binary~=2.9.10",
    "python-dotenv~=1.0.1",
    "pytz~=2024.2",
    "pandas~=2.2.3",
    "matplotlib~=3.10.0",
    "windrose~=1.9.2"
]